[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Changeblogger"
dynamic = ["version"]
description = "AI-powered Git changes summarizer"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ObsoleteNerd", email = "me@obsoletenerd.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
changeblogger = "changeblogger.main:main"

[project.urls]
Homepage = "https://github.com/obsoletenerd/changeblogger"
Repository = "https://github.com/obsoletenerd/changeblogger.git"
Issues = "https://github.com/obsoletenerd/changeblogger/issues"
